--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
   </div>
 
   <div class="row" style="margin-top:16px">
-    <div class="card" style="flex:2">
+    <div class="card" style="flex:1">
       <div class="toolbar"><div style="font-weight:600;color:#a7b1c9">最新异常事件</div></div>
       <table class="table">
         <thead>
@@ -50,9 +50,19 @@
         <tbody id="latest-body"></tbody>
       </table>
     </div>
+  </div>
+
+  <div class="row" style="margin-top:12px">
     <div class="card" style="flex:1">
       <div class="toolbar"><div style="font-weight:600;color:#a7b1c9">异常类型分布</div></div>
       <div class="chart-wrap"><canvas id="typeChart"></canvas></div>
+    </div>
+  </div>
+
+  <div class="row" style="margin-top:16px">
+    <div class="card" style="flex:1">
+      <div class="toolbar"><div style="font-weight:600;color:#a7b1c9">AI 建议</div></div>
+      <div id="ai-list"></div>
     </div>
   </div>
 
