更改历史记录刷新时间

--- a/web/settings.html
+++ b/web/settings.html
@@ -62,6 +62,6 @@
     </div>
   </div>
 </div>
-<script type="module" src="./assets/settings.js"></script>
+<script type="module" src="./assets/settings.js?v=2"></script>
 </body>
 </html>
