--- a/web/history.html
+++ b/web/history.html
@@ -37,7 +37,9 @@
         <label class="check-pill"><input type="checkbox" value="deadlock"> deadlock</label>
       </div>
       <input id="q-keyword" class="input" placeholder="关键词"/>
-      <input id="q-host" class="input" placeholder="host_id"/>
+      <select id="q-host" class="input" style="min-width:150px">
+        <option value="">全部主机</option>
+      </select>
       <button id="btn-search" class="btn primary">搜索</button>
     </div>
     <table class="table">
